# rectangle

./: .gitignore  Cargo.toml  LICENSE.🍪  README.md  flake.nix  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
