[package]
name = "rectangle"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"

# "rp2040-e5" uhh
rp2040-hal = { version = "0.9", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"

usb-device = "0.2"
usbd-serial = "0.1"
heapless = "0.8"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# exempt build scripts
[profile.release.build-override]
codegen-units = 8
debug = false
